@@ -29,6 +29,7 @@ import com.sun.net.httpserver.HttpServer;
 import com.sun.net.httpserver.HttpsServer;
 
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.net.InetSocketAddress;
 import java.security.AccessController;
 import java.security.PrivilegedAction;
@@ -96,12 +97,17 @@ public abstract class HttpServerProvider {
         if (cn == null)
             return false;
         try {
-            @SuppressWarnings("deprecation")
-            Object o = Class.forName(cn, true,
-                                     ClassLoader.getSystemClassLoader()).newInstance();
-            provider = (HttpServerProvider)o;
-            return true;
-        } catch (ClassNotFoundException |
+            var cls = Class.forName(cn, false, ClassLoader.getSystemClassLoader());
+            if (HttpServerProvider.class.isAssignableFrom(cls)) {
+                provider = (HttpServerProvider) cls.getDeclaredConstructor().newInstance();
+                return true;
+            } else {
+                throw new ServiceConfigurationError("not assignable to HttpServerProvider: "
+                        + cls.getName());
+            }
+        } catch (InvocationTargetException |
+                 NoSuchMethodException |
+                 ClassNotFoundException |
                  IllegalAccessException |
                  InstantiationException |
                  SecurityException x) {
